# pane-awareness

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api_reference.md  configuration.md  hooks_guide.md  mcp_tools.md  vault_integration.md
examples/: basic_setup.py  claim_workflow.py  convergence_demo.py  multi_pane_simulation.py
extensions/dashboard/: api.py
extensions/dashboard/frontend/: panes.tsx
extensions/vault_writer/: __init__.py  config.py  linker.py  schema.py  slugify.py  templates.py  writer.py
hooks/claude_code/: README.md  claim_guard.py  prompt_hook.py  session_start_hook.py  settings_example.json
hooks/generic/: README.md  hook_template.py
mcp/: README.md  server.py
src/pane_awareness/: __init__.py  _compat.py  claims.py  cli.py  config.py  convergence.py  cross_pollination.py  delegation.py  domains.py  handoff.py  messages.py  quadrant.py  registry.py  state.py  topics.py
src/pane_awareness/extensions/: dashboard_api.py
tests/: conftest.py  test_claims.py  test_convergence.py  test_cross_pollination.py  test_messages.py  test_registry.py  test_topics.py
tests/integration/: test_multi_pane.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: page.tsx
web/app/docs/: layout.tsx  page.tsx
web/components/: architecture.tsx  code-block.tsx  docs-sidebar.tsx  features.tsx  footer.tsx  hero.tsx  markdown-renderer.tsx  nav.tsx  quick-start.tsx
web/components/dashboard/: accuracy.tsx  claims.tsx  demo-banner.tsx  messages.tsx  predictions.tsx  (+4 more)
web/lib/: api.ts  docs-content.ts  mock-data.ts  types.ts
(+10 files in other folders)
