[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pane-awareness"
version = "0.1.0"
description = "Cross-session coordination for AI coding assistants running in parallel terminal panes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Mohamed Diomande" },
]
keywords = ["ai", "terminal", "coordination", "claude-code", "pane", "session"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Terminals",
    "Typing :: Typed",
]

[project.optional-dependencies]
vault = ["pyyaml"]
dashboard = ["fastapi", "uvicorn"]
mcp = ["mcp"]
dev = ["pytest", "pytest-cov", "ruff"]

[project.scripts]
pa = "pane_awareness.cli:main"

[project.urls]
Homepage = "https://github.com/mohameddiomande/pane-awareness"
Repository = "https://github.com/mohameddiomande/pane-awareness"
Issues = "https://github.com/mohameddiomande/pane-awareness/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pane_awareness"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
